[gd_scene load_steps=29 format=3 uid="uid://bnt5241iy3pp7"]

[ext_resource type="Script" path="res://scenes/main menu/main_menu.gd" id="1_xfcrf"]
[ext_resource type="Texture2D" uid="uid://butnmpkhfwho4" path="res://sprites/logo.png" id="2_dediy"]
[ext_resource type="Shader" path="res://shaders/post_processing/crt_postprocess.gdshader" id="3_8mgm0"]
[ext_resource type="PackedScene" uid="uid://bnwsa1t40yf5q" path="res://scenes/cubigor/prettygaytbh.tscn" id="3_fpams"]
[ext_resource type="Texture2D" uid="uid://b1jp30ai5f8kp" path="res://sprites/Instituto_Federal_de_Goi√°s_-_Marca_Vertical_2015.svg.png" id="4_jtiqu"]
[ext_resource type="Texture2D" uid="uid://bab8yt52b1a3o" path="res://sprites/power.png" id="5_amkwd"]
[ext_resource type="Texture2D" uid="uid://bp3nh64ldrpw2" path="res://sprites/audio.png" id="5_l40gv"]
[ext_resource type="Texture2D" uid="uid://bx0dlqek77v1i" path="res://sprites/audiodisabled.png" id="6_3cicx"]
[ext_resource type="PackedScene" uid="uid://btl1e5x4iv3p5" path="res://scenes/splash/splash_screen.tscn" id="7_0yxcy"]
[ext_resource type="FontFile" uid="uid://cpmmo07pbocsh" path="res://fonts/Vermin Vibes 1989.ttf" id="7_hxvmw"]
[ext_resource type="StyleBox" uid="uid://djpqbyxyro8sk" path="res://resources/invisible.tres" id="8_fcre7"]
[ext_resource type="AudioStream" uid="uid://b50muw4vmi0ug" path="res://audio/ambientloop.wav" id="8_qc6vo"]
[ext_resource type="PackedScene" uid="uid://bin6va1btyxpn" path="res://scenes/pessoais/pessoais_button.tscn" id="11_dan5j"]
[ext_resource type="PackedScene" uid="uid://cpim0hfyc3kr0" path="res://scenes/cubigor/cubigor.tscn" id="12_xo21c"]
[ext_resource type="PackedScene" uid="uid://bj2mltt8gsqow" path="res://scenes/authenticator/folderlocked_button.tscn" id="13_j8r1x"]
[ext_resource type="PackedScene" uid="uid://clsapeh5doyoe" path="res://scenes/nelix/play_nelix_button.tscn" id="16_fhs21"]
[ext_resource type="Script" path="res://scenes/music_player/musicplayer.gd" id="17_gyd0p"]
[ext_resource type="AudioStream" uid="uid://bwjs0w57phcsg" path="res://audio/Take Care.mp3" id="18_373ej"]
[ext_resource type="PackedScene" uid="uid://naxxreavcae8" path="res://scenes/Aulas/aulas_button.tscn" id="20_e8l5l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1qgy"]
bg_color = Color(0.0627451, 0.0784314, 0.121569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yma61"]
bg_color = Color(0.131791, 0.156469, 0.224271, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="LabelSettings" id="LabelSettings_4jkf1"]
font = ExtResource("7_hxvmw")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_uhrpj"]
font = ExtResource("7_hxvmw")
font_size = 22

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xpere"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_etf32"]
font = ExtResource("7_hxvmw")
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qcr3d"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jlm0k"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v3j3e"]
shader = ExtResource("3_8mgm0")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.22
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.0
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = false
shader_parameter/roll_speed = 1.0
shader_parameter/roll_size = 12.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.0
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.015
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.382
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="Main-menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xfcrf")
metadata/_edit_vertical_guides_ = [-80.0]

[node name="cubigor" parent="." instance=ExtResource("12_xo21c")]

[node name="gaytscn" parent="." instance=ExtResource("3_fpams")]

[node name="desktop" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="Panel" parent="desktop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m1qgy")

[node name="portfolio" type="TextureRect" parent="desktop"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -20.0
offset_right = 53.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(53, 20)
texture = ExtResource("2_dediy")

[node name="middle" type="Marker2D" parent="desktop"]
gizmo_extents = 20.0

[node name="panel" type="Control" parent="desktop"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.148
offset_bottom = 0.0960007

[node name="Panel" type="Panel" parent="desktop/panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.167
anchor_right = 0.986
anchor_bottom = 0.833
offset_left = -0.128
offset_top = -0.0320015
offset_right = 0.12793
offset_bottom = 0.0319901
theme_override_styles/panel = SubResource("StyleBoxFlat_yma61")

[node name="time" type="Label" parent="desktop/panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.463542
anchor_top = 0.25
anchor_right = 0.536458
anchor_bottom = 0.541667
offset_left = -0.000427246
offset_right = 0.000366211
grow_horizontal = 2
grow_vertical = 2
text = "10:18:15
"
label_settings = SubResource("LabelSettings_4jkf1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="date" type="Label" parent="desktop/panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.444444
anchor_top = 0.541667
anchor_right = 0.545139
anchor_bottom = 0.75
offset_left = 3.05176e-05
offset_top = -3.05176e-05
offset_right = -6.10352e-05
grow_horizontal = 2
grow_vertical = 0
text = "09/02/1995"
label_settings = SubResource("LabelSettings_uhrpj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="IFg_logo" type="TextureRect" parent="desktop/panel"]
layout_mode = 0
offset_left = 1039.0
offset_top = 24.0
offset_right = 1175.0
offset_bottom = 120.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_jtiqu")
expand_mode = 1
stretch_mode = 1

[node name="Folders" type="Control" parent="desktop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="musicplayer" type="TextureButton" parent="desktop/Folders"]
layout_mode = 0
offset_left = 1048.0
offset_top = 256.0
offset_right = 1088.0
offset_bottom = 296.0
pivot_offset = Vector2(20, 20)
texture_normal = ExtResource("5_l40gv")
texture_pressed = ExtResource("5_l40gv")
texture_hover = ExtResource("5_l40gv")
stretch_mode = 0
script = ExtResource("17_gyd0p")

[node name="selected_panel" type="Panel" parent="desktop/Folders/musicplayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_top = 1.025
anchor_right = 1.4
anchor_bottom = 1.325
offset_left = -36.0
offset_top = 1.0
offset_right = 34.0
offset_bottom = 25.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xpere")

[node name="filename" type="Label" parent="desktop/Folders/musicplayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.99
anchor_right = 1.0
anchor_bottom = 1.34
offset_left = -26.0
offset_top = 6.39999
offset_right = 26.0
offset_bottom = 23.4
grow_horizontal = 2
grow_vertical = 2
text = "Play 
\"take care\""
label_settings = SubResource("LabelSettings_etf32")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="desktop/Folders/musicplayer"]
wait_time = 0.3
one_shot = true

[node name="takecare" type="AudioStreamPlayer" parent="desktop/Folders/musicplayer"]
stream = ExtResource("18_373ej")

[node name="pessoais" parent="desktop/Folders" instance=ExtResource("11_dan5j")]
layout_mode = 1
anchor_left = 0.0546875
anchor_top = 0.395062
anchor_right = 0.0894097
anchor_bottom = 0.45679
offset_top = 0.0

[node name="aulas" parent="desktop/Folders" instance=ExtResource("20_e8l5l")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 60.0
offset_top = 128.0
offset_right = 100.0
offset_bottom = 168.0

[node name="folderlocked" parent="desktop/Folders" instance=ExtResource("13_j8r1x")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 63.0
offset_top = 383.0
offset_right = 103.0
offset_bottom = 423.0

[node name="play nelix" parent="desktop/Folders" instance=ExtResource("16_fhs21")]
layout_mode = 1
anchor_left = 0.909722
anchor_top = 0.197531
anchor_right = 0.946181
anchor_bottom = 0.262346

[node name="audio_button_texture" type="TextureRect" parent="desktop"]
layout_mode = 0
offset_left = 106.0
offset_top = 31.0
offset_right = 146.0
offset_bottom = 71.0
texture = ExtResource("5_l40gv")

[node name="audio_disabled_texture" type="TextureRect" parent="desktop"]
layout_mode = 0
offset_left = 106.0
offset_top = 31.0
offset_right = 146.0
offset_bottom = 71.0
texture = ExtResource("6_3cicx")

[node name="Power_button_texture" type="TextureRect" parent="desktop"]
layout_mode = 0
offset_left = 49.0
offset_top = 31.0
offset_right = 89.0
offset_bottom = 71.0
texture = ExtResource("5_amkwd")

[node name="sound_button" type="Button" parent="desktop"]
layout_mode = 0
offset_left = 116.0
offset_top = 44.0
offset_right = 155.0
offset_bottom = 85.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_qcr3d")
theme_override_styles/pressed = ExtResource("8_fcre7")
theme_override_styles/normal = SubResource("StyleBoxFlat_jlm0k")
toggle_mode = true

[node name="power_button" type="Button" parent="desktop"]
layout_mode = 0
offset_left = 77.0
offset_top = 49.0
offset_right = 116.0
offset_bottom = 90.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_qcr3d")
theme_override_styles/pressed = ExtResource("8_fcre7")
theme_override_styles/normal = SubResource("StyleBoxFlat_jlm0k")
toggle_mode = true

[node name="crt" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_v3j3e")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="middle" type="Marker2D" parent="."]
position = Vector2(576, 324)
gizmo_extents = 353.4

[node name="splash_screen" parent="." instance=ExtResource("7_0yxcy")]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_qc6vo")

[connection signal="cubigorbk" from="cubigor" to="." method="_on_cubigor_cubigorbk"]
[connection signal="cubigorbk" from="gaytscn" to="." method="_on_gaytscn_cubigorbk"]
[connection signal="pressed" from="desktop/Folders/musicplayer" to="desktop/Folders/musicplayer" method="_on_pressed"]
[connection signal="timeout" from="desktop/Folders/musicplayer/Timer" to="desktop/Folders/musicplayer" method="_on_timer_timeout"]
[connection signal="pressed" from="desktop/sound_button" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="desktop/power_button" to="." method="_on_power_button_pressed"]
